# Medieval_II_Modding_Library_Core

./: .gitignore  CMakeLists.txt  Dockerfile  config.h.in  docker-compose.yaml  main.cpp  main.out
.devcontainer/: Dockerfile  devcontainer.json
lib/MRW/private/: ModReader.cpp
lib/MRW/resources/: export_descr_buildings.txt
resources/: miimlc.db
src/: CMakeLists.txt
src/application/ModRW/private/: ModReader.cpp
src/application/ModRW/public/: IBuildingRepository.h  IFileParser.h  IRepository.h  ModReader.h
src/application/ModRW/public/Buildings/: IBuildingLevelRepository.h  IBuildingRepository.h  IHiddenResourceRepository.h
src/domain/DefinitionsLoader/public/: FileDefinition.h  FileSectionDefinition.h
src/domain/ModRW/private/: FileDefinition.cpp
src/domain/ModRW/public/: FileDefinition.h  FileEntryDefinition.h  FileSectionDefinition.h
src/domain/ModRW/public/Buildings/: Building.h  BuildingLevel.h  HiddenResource.h  HiddenResources.h
src/infrastructure/DefinitionsLoader/: CMakeLists.txt
src/infrastructure/DefinitionsLoader/private/: DefinitionsLoader.cpp
src/infrastructure/DefinitionsLoader/public/: DefinitionsLoader.h  FileDefinition.h  FileEntryDefinition.h  FileSectionDefinition.h
src/infrastructure/DefinitionsLoader/resources/: miimlc.db
src/infrastructure/ModRW/: CMakeLists.txt
src/infrastructure/ModRW/private/: ModReader.cpp
src/infrastructure/ModRW/public/: ModReader.h
src/infrastructure/ModRW/resources/: miimlc.db
src/infrastructure/TxtFileParser/: CMakeLists.txt
src/infrastructure/TxtFileParser/private/: ExportDescrBuildingsFileParser.cpp
src/infrastructure/TxtFileParser/public/: ExportDescrBuildingsFileParser.h  IFileParser.h
src/infrastructure/TxtRepository/: CMakeLists.txt
src/infrastructure/TxtRepository/private/: BuildingLevelRepository.cpp  BuildingRepository.cpp  HiddenResourceRepository.cpp
src/infrastructure/TxtRepository/public/: BuildingLevelRepository.h  BuildingRepository.h  HiddenResourceRepository.h
