cmake_minimum_required(VERSION 3.10)
project(miimlc VERSION 0.1)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED True)
add_executable(miimlc main.cpp)
add_subdirectory(lib/MRW)
target_link_libraries(miimlc PRIVATE ModReader)
target_include_directories(miimlc PUBLIC "${PROJECT_BINARY_DIR}")