add_library(ModReader STATIC application/ModRW/private/ModReader.cpp)
target_include_directories(ModReader PRIVATE application/ModRW/public)
include_directories(domain/ModRW/public)

add_subdirectory(infrastructure/DefinitionsLoader/)
add_library(DefinitionsLoader STATIC infrastructure/DefinitionsLoader/private/DefinitionsLoader.cpp)
target_include_directories(DefinitionsLoader PRIVATE infrastructure/DefinitionsLoader/public)

target_link_libraries(ModReader PRIVATE DefinitionsLoader)
target_include_directories(ModReader PRIVATE infrastructure/DefinitionsLoader/public)
