add_library(ModReader private/ModReader.cpp)
target_include_directories(ModReader PUBLIC public)
set(THREADS_PREFER_PTHREAD_FLAG ON)
find_package(Threads REQUIRED)
add_library(sqlite inc/sqlite/sqlite3.c)
target_link_libraries(ModReader PRIVATE sqlite Threads::Threads ${CMAKE_DL_LIBS})
target_include_directories(ModReader PUBLIC inc/sqlite)